signin log text-align fixed

--- a/themes/default/statics/css/main.styles.css
+++ b/themes/default/statics/css/main.styles.css
@@ -1132,6 +1132,7 @@ body
   font-size: 31px;
   font-weight: 700;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .logo_login {
